--- a/index.html
+++ b/index.html
@@ -24,7 +24,19 @@
             <li id="two-players">2 Players</li>
           </ul>
       </div>
-      <div id="game-board">
+      <div id="playerOneWinner" class="messageCenter">
+        <h1>Player One Wins!!</h1>
+        <p class="startOver">(Click Here to Restart)</p>
+      </div>
+      <div id="playerTwoWinner" class="messageCenter">
+        <h1>Player Two Wins!!</h1>
+        <p class="startOver">(Click Here to Restart)</p>
+      </div>
+      <div id="catsGame" class="messageCenter">
+        <h1>Cat's Game!!</h1>
+        <p class="startOver">(Click Here to Restart)</p>
+      </div>
+      <div id= "game-board">
         <div class="row row-0">
           <div class="col-md-4 col-sm-4 col-xs-4 space-0 board" id="0"><p></p></div>
           <div class="col-md-4 col-sm-4 col-xs-4 space-1 board" id="1"><p></p></div>
