add final styling and functionallity

--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
   </head>
   <body>
     <div class="container">
+      <div id="playerOneWinner" class="messageCenter overlay">
+        <h1>Player One Wins!!</h1>
+        <p class="startOver">(Click Here to Restart)</p>
+      </div>
+      <div id="playerTwoWinner" class="messageCenter overlay">
+        <h1>Player Two Wins!!</h1>
+        <p class="startOver">(Click Here to Restart)</p>
+      </div>
+      <div id="catsGame" class="messageCenter overlay">
+        <h1>Cat's Game!!</h1>
+        <p class="startOver">(Click Here to Restart)</p>
+      </div>
+    </div>
+    <div class="container">
       <div class="jumbotron">
         <h1>TIC-TAC-TOE</h1>
       </div>
@@ -24,18 +38,7 @@
             <li id="two-players">2 Players</li>
           </ul>
       </div>
-      <div id="playerOneWinner" class="messageCenter">
-        <h1>Player One Wins!!</h1>
-        <p class="startOver">(Click Here to Restart)</p>
-      </div>
-      <div id="playerTwoWinner" class="messageCenter">
-        <h1>Player Two Wins!!</h1>
-        <p class="startOver">(Click Here to Restart)</p>
-      </div>
-      <div id="catsGame" class="messageCenter">
-        <h1>Cat's Game!!</h1>
-        <p class="startOver">(Click Here to Restart)</p>
-      </div>
+      <!-- This is where the message center went -->
       <div id= "game-board">
         <div class="row row-0">
           <div class="col-md-4 col-sm-4 col-xs-4 space-0 board" id="0"><p></p></div>
